--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cleave.js": "^1.6.0",
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.34.2",
+    "lucide-react": "^0.575.0",
     "react": "^19.2.4",
     "react-collapse": "^5.1.1",
     "react-dom": "^19.2.4",
@@ -27,6 +28,7 @@
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "simplebar-react": "^3.3.2",
+    "tailwind-merge": "^3.5.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
